lessons/066/examples/1-default-deny-egress.yaml
  
# Default deny all egress traffic
# You can create a "default" egress isolation policy for a namespace by creating a 
# NetworkPolicy that selects all pods but does not allow any egress traffic from those pods.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Egress
