lessons/066/examples/3-allow-all-egress.yaml
# Default allow all egress traffic
# If you want to allow all traffic from all pods in a namespace (even if policies are 
# added that cause some pods to be treated as "isolated"), you can create a policy that 
# explicitly allows all egress traffic in that namespace.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: production
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
